# file-loader

./: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: s3_inventory.csv
grafana_data/: grafana.db
grafana_data/plugins/grafana-metricsdrilldown-app/: MANIFEST.txt
grafana_data/plugins/grafana-pyroscope-app/: MANIFEST.txt
infra/: task-definition.json
localstack_data/state/cloudwatch/: metrics.db
localstack_data/state/dynamodb/: 000000000000apsouth1_ap-south-1.db  000000000000useast1_us-east-1.db
src/file_loader/: .env  .env.localstack  .env.production  aws_clients.py  config.py  enqueue.py  utils.py
